--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
   "type": "module",
   "scripts": {
     "test": "vitest",
-    "prepublish": "tsc --watch false"
+    "prepublish": "tsc --watch false",
+    "publish": "npm publish --access public"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
+    "eslint": "^8.22.0",
+    "prettier": "^2.7.1",
     "vitest": "^0.21.1"
   }
 }
