--- a/package.json
+++ b/package.json
@@ -7,17 +7,22 @@
   "type": "module",
   "scripts": {
     "test": "vitest",
-    "prepublish": "tsc --watch false",
-    "publish": "npm publish --access public"
+    "prepublishOnly": "tsc --watch false",
+    "publish": "npm publish --access public",
+    "lint": "npx eslint src/**/*.ts",
+    "prettier": "npx prettier -w .",
+    "prepare": "husky install"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "fuka-g",
+  "license": "MIT",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
     "eslint": "^8.22.0",
+    "husky": "^8.0.1",
     "prettier": "^2.7.1",
+    "typescript": "^4.7.4",
     "vitest": "^0.21.1"
   }
 }
