--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "type": "module",
   "scripts": {
     "test": "vitest",
+    "test-ui": "vitest --ui",
     "prepublishOnly": "tsc --watch false",
     "publish": "npm publish --access public",
     "lint": "npx eslint src/**/*.ts",
@@ -19,10 +20,11 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
+    "@vitest/ui": "^0.22.0",
     "eslint": "^8.22.0",
     "husky": "^8.0.1",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4",
-    "vitest": "^0.21.1"
+    "vitest": "^0.22.0"
   }
 }
