--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fuka-g/keylog",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "A Node.js logging library",
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
@@ -9,7 +9,7 @@
     "test": "vitest",
     "test-ui": "vitest --ui",
     "prepublishOnly": "tsc --watch false",
-    "publish": "npm publish --access public",
+    "publish": "tsc --watch false && npm publish --access public",
     "lint": "npx eslint src/**/*.ts",
     "prettier": "npx prettier -w .",
     "prepare": "husky install"
